2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/Storage__c.object-meta.xml
<CustomObject>
    <description>Storage by CSA or PSA</description>
    <label>Storage</label>
    <nameField>
        <label>Storage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Storage</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>