2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Storage</relationshipLabel>
    <relationshipName>R00N2000000124QsEAI</relationshipName>
    <type>Lookup</type>
</CustomField>