2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Aircon_24hrs__c.field-meta.xml
<CustomField>
    <fullName>Aircon_24hrs__c</fullName>
    <label>Aircon (24hrs)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>