2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Avg_rate_per_cbm__c.field-meta.xml
<CustomField>
    <fullName>Avg_rate_per_cbm__c</fullName>
    <formula>Quoted_Amt__c  /  Volume__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg Rate (per cbm)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>