2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Bill_to__c.field-meta.xml
<CustomField>
    <fullName>Bill_to__c</fullName>
    <label>Bill to</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Shipper</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>