2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Billing_Cycle_in_Months__c.field-meta.xml
<CustomField>
    <fullName>Billing_Cycle_in_Months__c</fullName>
    <label>Billing Cycle in Months</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>