2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Billing_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Billing_Expiry__c</fullName>
    <inlineHelpText>Last day of billing cycle.</inlineHelpText>
    <label>Billing Expiry</label>
    <type>Date</type>
</CustomField>