2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Billing_Party__c.field-meta.xml
<CustomField>
    <fullName>Billing_Party__c</fullName>
    <label>Billing Party</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>