2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Billing_til__c.field-meta.xml
<CustomField>
    <fullName>Billing_til__c</fullName>
    <label>Billing til</label>
    <type>Date</type>
</CustomField>