2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/C2__c.field-meta.xml
<CustomField>
    <fullName>C2__c</fullName>
    <label>C2</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>