2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>