2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Climate_Controlled__c.field-meta.xml
<CustomField>
    <fullName>Climate_Controlled__c</fullName>
    <label>Climate Controlled</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>