2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Closed__c.field-meta.xml
<CustomField>
    <fullName>Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When all items are removed, check the box</description>
    <label>Lease Terminated</label>
    <type>Checkbox</type>
</CustomField>