2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Collector__c.field-meta.xml
<CustomField>
    <fullName>Collector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collector</label>
    <referenceTo>artApp__Collector__c</referenceTo>
    <relationshipLabel>Storage</relationshipLabel>
    <relationshipName>Storage</relationshipName>
    <type>Lookup</type>
</CustomField>