2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Storage</relationshipLabel>
    <relationshipName>R00N2000000124QxEAI</relationshipName>
    <type>Lookup</type>
</CustomField>