2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/CSE__c.field-meta.xml
<CustomField>
    <fullName>CSE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSE</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Storage</relationshipName>
    <type>Lookup</type>
</CustomField>