2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Date_Insurance_expire__c.field-meta.xml
<CustomField>
    <fullName>Date_Insurance_expire__c</fullName>
    <formula>Effective_Date__c  + Number_of_Days_insured__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance Expiry Date</label>
    <type>Date</type>
</CustomField>