2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Date_of_Notice__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Notice__c</fullName>
    <description>Date when we notify relevant party to extend insurance</description>
    <label>Date of Notice</label>
    <type>Date</type>
</CustomField>