2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/DateIn__c.field-meta.xml
<CustomField>
    <fullName>DateIn__c</fullName>
    <label>Date In</label>
    <type>Date</type>
</CustomField>