2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/DateOut__c.field-meta.xml
<CustomField>
    <fullName>DateOut__c</fullName>
    <label>Date Out</label>
    <type>Date</type>
</CustomField>