2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Days_in_Storage__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Storage__c</fullName>
    <description>IF(  {!Closed__c} , ROUND(  {!DateOut__c} -  {!DateIn__c} , 0) , ROUND(NOW() -  {!DateIn__c}  ,0) )</description>
    <formula>IF(  Closed__c , Lease_Expiry_Date__c -  Lease_Start_Date__c  , TODAY() -  Lease_Start_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Storage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>