2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Discount_Mth__c.field-meta.xml
<CustomField>
    <fullName>Discount_Mth__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Discount / Mth</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>