2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/DocuSign_Status__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DocuSign Status</label>
    <referenceTo>dsfs__DocuSign_Status__c</referenceTo>
    <relationshipLabel>Storage</relationshipLabel>
    <relationshipName>Storage</relationshipName>
    <type>Lookup</type>
</CustomField>