2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>Date insurance start</description>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>