2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <formula>Effective_Date__c  + SIT_Period_days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>