2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/FOC_Storage__c.field-meta.xml
<CustomField>
    <fullName>FOC_Storage__c</fullName>
    <label>FOC Storage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>