2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Insurance_Cert_No__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Cert_No__c</fullName>
    <label>Insurance Cert. No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>