2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Insurance_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Issue_Date__c</fullName>
    <description>Insurance Issue Date</description>
    <label>Insurance Issue Date</label>
    <type>Date</type>
</CustomField>