2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Insurance_Rate__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Rate__c</fullName>
    <label>Insurance Rate (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>