2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Insured_by__c.field-meta.xml
<CustomField>
    <fullName>Insured_by__c</fullName>
    <label>Insured by</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Helutrans</fullName>
            </value>
            <value>
                <fullName>Collector</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>