2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Amount__c</fullName>
    <formula>( (  Quoted_Amt__c  -  Discount_Mth__c  )  +  Storage_Insurance__c )  *  Billing_Cycle_in_Months__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total invoice amount = ((quoted amt/mth - discounted amt/mth) + storage insurance/mth) x billing cycle in mths</inlineHelpText>
    <label>Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>