2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Job_No__c.field-meta.xml
<CustomField>
    <fullName>Job_No__c</fullName>
    <label>Job No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>