2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Last_Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>Last_Invoice_No__c</fullName>
    <label>Last Invoice No.</label>
    <length>30</length>
    <type>Text</type>
</CustomField>