2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Last_Stock_Check_cycle_count__c.field-meta.xml
<CustomField>
    <fullName>Last_Stock_Check_cycle_count__c</fullName>
    <label>Last Stock Check / Cycle Count</label>
    <type>Date</type>
</CustomField>