2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Lease_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Lease_Expiry_Date__c</fullName>
    <label>Lease Expiry Date</label>
    <type>Date</type>
</CustomField>