2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Location_Row__c.field-meta.xml
<CustomField>
    <fullName>Location_Row__c</fullName>
    <label>Location Row</label>
    <length>12</length>
    <type>Text</type>
</CustomField>