2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>WA</fullName>
            </value>
            <value>
                <fullName>Inventory Control Storage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>