2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Notify_Insurance_Company__c.field-meta.xml
<CustomField>
    <fullName>Notify_Insurance_Company__c</fullName>
    <label>Date to Notify Insurance Company</label>
    <type>Date</type>
</CustomField>