2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Number_of_Days_insured__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_insured__c</fullName>
    <label>Number of Days insured</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>