2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Storage</relationshipLabel>
    <relationshipName>R00N2000000126mKEAQ</relationshipName>
    <type>Lookup</type>
</CustomField>