2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term__c</fullName>
    <defaultValue>&quot;IMMEDIATE&quot;</defaultValue>
    <label>Payment Term</label>
    <length>20</length>
    <type>Text</type>
</CustomField>