2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <label>Period</label>
    <length>25</length>
    <type>Text</type>
</CustomField>