2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Quoted_Amt__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Amt__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>Previously named as Storage Rates (Monthly)</inlineHelpText>
    <label>Quoted Amount / Mth</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>