2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Rate_per_CBM_del__c.field-meta.xml
<CustomField>
    <fullName>Rate_per_CBM_del__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Rate (per cbm)</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>