2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Rate_per_Sqm_del__c.field-meta.xml
<CustomField>
    <fullName>Rate_per_Sqm_del__c</fullName>
    <label>Rate (per Sqm)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>