2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Rate_per_Tsubo__c.field-meta.xml
<CustomField>
    <fullName>Rate_per_Tsubo__c</fullName>
    <formula>Quoted_Amt__c /  Room_Size_Tsubo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rate (per Tsubo 坪)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>