2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Reason_for_Termination__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Termination__c</fullName>
    <label>Reason for Termination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client moved to competitor warehouse (state reason in remarks)</fullName>
            </value>
            <value>
                <fullName>Client moved to their own personal storage space</fullName>
            </value>
            <value>
                <fullName>Contract renewal</fullName>
            </value>
            <value>
                <fullName>Short term storage before re-export</fullName>
            </value>
            <value>
                <fullName>Short term storage before collection</fullName>
            </value>
            <value>
                <fullName>Moved from HT PSA to HT CSA</fullName>
            </value>
            <value>
                <fullName>Moved from HT CSA to HT PSA</fullName>
            </value>
            <value>
                <fullName>Other (state reason in remarks)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>