2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/recontract_date__c.field-meta.xml
<CustomField>
    <fullName>recontract_date__c</fullName>
    <label>Recontract date</label>
    <type>Date</type>
</CustomField>