2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Room_Size_sqm__c.field-meta.xml
<CustomField>
    <fullName>Room_Size_sqm__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Room Size (sqm)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>