2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Room_Size_Tsubo__c.field-meta.xml
<CustomField>
    <fullName>Room_Size_Tsubo__c</fullName>
    <label>Room Size (Tsubo 坪)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>