2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/SIT_Extension_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>SIT_Extension_Expiry_Date__c</fullName>
    <formula>Notify_Insurance_Company__c  + SIT_Extension_Period_days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SIT Extension Expiry Date</label>
    <type>Date</type>
</CustomField>