2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/SIT_Extension_Period_days__c.field-meta.xml
<CustomField>
    <fullName>SIT_Extension_Period_days__c</fullName>
    <label>SIT Extension Period (days)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>