2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Standard_Liability__c.field-meta.xml
<CustomField>
    <fullName>Standard_Liability__c</fullName>
    <defaultValue>&quot;NO&quot;</defaultValue>
    <label>Standard Liability</label>
    <type>TextArea</type>
</CustomField>