2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Storage_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Storage_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Storage Agreement</label>
    <type>Checkbox</type>
</CustomField>