2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Storage_Environment__c.field-meta.xml
<CustomField>
    <fullName>Storage_Environment__c</fullName>
    <label>Storage Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Climate</fullName>
            </value>
            <value>
                <fullName>Non-Climate</fullName>
            </value>
            <value>
                <fullName>Climate &amp; Non-Climate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>