2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Storage_Facility__c.field-meta.xml
<CustomField>
    <fullName>Storage_Facility__c</fullName>
    <label>Storage Facility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ATL</fullName>
            </value>
            <value>
                <fullName>City Centre</fullName>
            </value>
            <value>
                <fullName>Freeport</fullName>
            </value>
            <value>
                <fullName>Global Gateway</fullName>
            </value>
            <value>
                <fullName>Linji</fullName>
            </value>
            <value>
                <fullName>Mapletree</fullName>
            </value>
            <value>
                <fullName>Multiple WH</fullName>
            </value>
            <value>
                <fullName>Terrada Art Complex</fullName>
            </value>
            <value>
                <fullName>Jinma</fullName>
            </value>
            <value>
                <fullName>TsingYi</fullName>
            </value>
            <value>
                <fullName>Cheung Hing Shing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>