2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Storage_Group__c.field-meta.xml
<CustomField>
    <fullName>Storage_Group__c</fullName>
    <formula>LEFT( Name ,6)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Storage Group</label>
    <type>Text</type>
</CustomField>