2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Storage_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Storage_Insurance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Storage Insurance / Mth</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>