2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Term_of_Rental__c.field-meta.xml
<CustomField>
    <fullName>Term_of_Rental__c</fullName>
    <defaultValue>&quot;AUTO RENEWABLE&quot;</defaultValue>
    <label>Term of Rental</label>
    <length>20</length>
    <type>Text</type>
</CustomField>