2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Valuation_List__c.field-meta.xml
<CustomField>
    <fullName>Valuation_List__c</fullName>
    <label>Valuation List</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>