2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Volume__c.field-meta.xml
<CustomField>
    <fullName>Volume__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Volume (cbm)</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>