2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/fields/Zero_rated__c.field-meta.xml
<CustomField>
    <fullName>Zero_rated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if GST is WAIVED</description>
    <inlineHelpText>Check this box if GST is WAIVED</inlineHelpText>
    <label>Zero-rated</label>
    <type>Checkbox</type>
</CustomField>