2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/recordTypes/AM_BJ_PSA.recordType-meta.xml
<RecordType>
    <fullName>AM_BJ_PSA</fullName>
    <active>true</active>
    <label>AM BJ PSA</label>
</RecordType>