2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/recordTypes/AM_HK_PSA.recordType-meta.xml
<RecordType>
    <fullName>AM_HK_PSA</fullName>
    <active>true</active>
    <label>AM HK PSA</label>
</RecordType>