2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/recordTypes/AM_SG_CSA.recordType-meta.xml
<RecordType>
    <fullName>AM_SG_CSA</fullName>
    <active>true</active>
    <description>Storage in Common Storage Area</description>
    <label>AM SG CSA</label>
</RecordType>