2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/recordTypes/AM_SG_PSA.recordType-meta.xml
<RecordType>
    <fullName>AM_SG_PSA</fullName>
    <active>true</active>
    <label>AM SG PSA</label>
</RecordType>