2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/recordTypes/HHGS.recordType-meta.xml
<RecordType>
    <fullName>HHGS</fullName>
    <active>true</active>
    <label>HHGS</label>
</RecordType>