2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/recordTypes/HTTR_Private.recordType-meta.xml
<RecordType>
    <fullName>HTTR_Private</fullName>
    <active>true</active>
    <label>HTTR Private</label>
</RecordType>