2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/recordTypes/PSAwInventoryControl.recordType-meta.xml
<RecordType>
    <fullName>PSAwInventoryControl</fullName>
    <active>true</active>
    <description>Helutrans keeps a record of the inventory</description>
    <label>PSA - w/ Inventory Control</label>
</RecordType>