2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/listViews/FP.listView-meta.xml
<ListView>
    <fullName>FP</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Room_Size_sqm__c</columns>
    <columns>Volume__c</columns>
    <columns>Quoted_Amt__c</columns>
    <columns>Remarks__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>FP</value>
    </filters>
    <label>FP</label>
    <language>en_US</language>
</ListView>