2nd training/Community/Community/Community1/force-app/main/default/objects/Storage__c/listViews/Freeport.listView-meta.xml
<ListView>
    <fullName>Freeport</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Collector__c</columns>
    <columns>Job_Reference__c</columns>
    <columns>Lease_Expiry_Date__c</columns>
    <columns>Lease_Start_Date__c</columns>
    <columns>Last_Stock_Check_cycle_count__c</columns>
    <columns>Room_Size_sqm__c</columns>
    <columns>Quoted_Amt__c</columns>
    <columns>Storage_Agreement__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Storage_Facility__c</field>
        <operation>equals</operation>
        <value>Freeport</value>
    </filters>
    <label>Freeport</label>
    <language>en_US</language>
</ListView>